# libtextcodec

./: .gitignore  CMakeLists.txt  textcodec.h
codecs/: big5codec.cpp  big5codec_p.h  cp949codetbl_p.h  eucjpcodec.cpp  eucjpcodec_p.h  euckrcodec.cpp  euckrcodec_p.h  gb18030codec.cpp  gb18030codec_p.h  isciicodec.cpp  isciicodec_p.h  jiscodec.cpp  jiscodec_p.h  jpunicode.cpp  jpunicode_p.h  latincodec.cpp  latincodec_p.h  simplecodec.cpp  simplecodec_p.h  sjiscodec.cpp  sjiscodec_p.h  textcodec.cpp  textcodec.h  textcodec_p.h  tsciicodec.cpp  tsciicodec_p.h  utfcodec.cpp  utfcodec_p.h  windowscodec.cpp  windowscodec_p.h
codecs/endian/: endian.hpp
qt_test/: qt_test_textcodec.pro  tst_qtextcodec.cpp
utils/: gb18030bitmap.cpp  gb18030bitmap.h
